# GUIA3

.ipynb_checkpoints/: README-checkpoint.md
.virtual_documents/Cuadernos/: Untitled1.ipynb
Cuadernos/: pyproject.toml
Cuadernos/.ipynb_checkpoints/: evaluación datos sobre obesidad-checkpoint.ipynb  pyproject-checkpoint.toml
